objects/TracRTC__Action_History__c.object
<CustomObject>
    <fields>
        <fullName>TracRTC__Action_Date__c</fullName>
        <label>Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Action_Number__c</fullName>
        <label>Action Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Flow_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flow Step</label>
        <referenceTo>TracRTC__Flow_Step__c</referenceTo>
        <relationshipLabel>Action History</relationshipLabel>
        <relationshipName>Action_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Action History</relationshipLabel>
        <relationshipName>Action_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action History</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>